updated park descriptions

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <section id="parks">
 
-    <h1 class="parks-title">Most Visited Parks</h1>
+    <h1 class="parks-title">Popular Destinations</h1>
 
     <div class="park-cards row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4">
       <div class="col">
@@ -105,7 +105,7 @@
           <a href="https://www.yelp.com/biz/wilshire-park-portland?osq=wilshire+park" target="_blank"><img src="images/wilshire.jpg" class="card-img-top" alt="wilshire-park"></a>
           <div class="card-body">
             <h5 class="card-title">Wilshire Park</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Wilshire Park is a 14.4-acre (5.8 ha) park in northeast Portland, Oregon. The park was acquired in 1940 and is maintained by Portland Parks & Recreation.</p>
           </div>
         </div>
       </div>
@@ -114,7 +114,7 @@
           <a href="https://www.yelp.com/biz/fernhill-park-portland" target="_blank"><img src="images/fernhill.jpg" class="card-img-top" alt="fernhill-park"></a>
           <div class="card-body">
             <h5 class="card-title">Fernhill Park</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">This 26.71-acre natural forest garden includes a wide variety of native plants, split-rail fencing, logs and boulders, and a gravel path.</p>
           </div>
         </div>
       </div>
@@ -124,7 +124,7 @@
             target="_blank"><img src="images/irvine.jpg" class="card-img-top" alt="irvine-park"></a>
           <div class="card-body">
             <h5 class="card-title">Irving Park</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">Irving Park is a city park of about 16 acres (6.5 ha) in northeast Portland, Oregon. Park amenities include fields for baseball, soccer, and an off-leash area.</p>
           </div>
         </div>
       </div>
@@ -133,7 +133,7 @@
           <a href="https://www.yelp.com/biz/mt-tabor-off-leash-dog-park-portland?osq=tabor+park" target="_blank"><img src="images/tabor.jpg" class="card-img-top" alt="tabor-park"></a>
           <div class="card-body">
             <h5 class="card-title">Mt. Tabor Park</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">The Mount Tabor Dog Park is, essentially, a small, old growth forest. While there is fencing, the off-leash area is only fenced on three sides.</p>
           </div>
         </div>
       </div>
@@ -142,7 +142,7 @@
           <a href="https://www.yelp.com/biz/wallace-park-portland?osq=irvine+dog+park" target=" _blank"><img src="images/wallace.jpg" class="card-img-top" alt="walllace-park"></a>
           <div class="card-body">
             <h5 class="card-title">Wallace Dog Park</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Wallace Dog Park, one of Portland, Oregon's many parks with designated off-leash areas, is a beloved playground housed on 5.39 acres of property.</p>
           </div>
         </div>
       </div>
@@ -151,7 +151,7 @@
           <a href="https://www.yelp.com/biz/1000-acre-dog-park-troutdale" target="_blank"><img src="images/1000.jpg" class="card-img-top" alt="1000-acre-park"></a>
           <div class="card-body">
             <h5 class="card-title">1000 Acre Park</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Thousand Acres, is the off-leash mecca of Portland. With 1,400 acres of open field, wetlands, countless trails, and two rivers where your dog can splash around, and run free, this is a dog's paradise.</p>
           </div>
         </div>
       </div>
